src/objects/jj_rb_Tolerance__c.object
<CustomObject>
    <description>This Object stores Tolerance Details</description>
    <fields>
        <fullName>jj_rb_Average_Quantity__c</fullName>
        <label>Average Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jj_rb_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tolerance</relationshipLabel>
        <relationshipName>Tolerance</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Price_Tolerance__c</fullName>
        <label>Price Tolerance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>jj_rb_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>jj_rb_Rebate_Product__c</referenceTo>
        <relationshipLabel>Tolerance</relationshipLabel>
        <relationshipName>Tolerance</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jj_rb_Quantity_Tolerance__c</fullName>
        <label>Quantity Tolerance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Tolerance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Customer__c</columns>
        <columns>jj_rb_Product__c</columns>
        <columns>jj_rb_Price_Tolerance__c</columns>
        <columns>jj_rb_Quantity_Tolerance__c</columns>
        <columns>jj_rb_Average_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Tolerance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tolerance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>